fix: 동료 피드백 gap 증가 및 위아래 padding 감소, 동료 이름 폰트 사이즈 증가

--- a/style.css
+++ b/style.css
@@ -313,11 +313,11 @@ header {
 .feedbacks div {
     width: 240px;
     display: flex;
-    padding: 10px 39px;
+    padding: 20px 39px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 
     border-radius: 10px;
     background: #FAFAFA;
@@ -339,7 +339,7 @@ header {
     color: #403930;
     text-align: center;
     font-family: Work Sans;
-    font-size: 10px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 700;
     line-height: 25px; /* 125% */
